--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5" style="text-align:center;">
+<div class="container" style="text-align:center;">
 
   <div *ngIf="!registerMode">
     <h1>Find your match!</h1>
