End of section 8

--- a/client/documentation/components/MessagesComponent.html
+++ b/client/documentation/components/MessagesComponent.html
@@ -276,7 +276,7 @@ export class MessagesComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><p>messages works!</p></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'ListsComponent', 'selector': 'app-lists'},{'name': 'MemberDetailComponent', 'selector': 'app-member-detail'},{'name': 'MemberListComponent', 'selector': 'app-member-list'},{'name': 'MessagesComponent', 'selector': 'app-messages'},{'name': 'NavComponent', 'selector': 'app-nav'},{'name': 'RegisterComponent', 'selector': 'app-register'}];
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'ListsComponent', 'selector': 'app-lists'},{'name': 'MemberDetailComponent', 'selector': 'app-member-detail'},{'name': 'MemberListComponent', 'selector': 'app-member-list'},{'name': 'MessagesComponent', 'selector': 'app-messages'},{'name': 'NavComponent', 'selector': 'app-nav'},{'name': 'NotFoundComponent', 'selector': 'app-not-found'},{'name': 'RegisterComponent', 'selector': 'app-register'},{'name': 'ServerErrorComponent', 'selector': 'app-server-error'},{'name': 'TestErrorsComponent', 'selector': 'app-test-errors'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'MessagesComponent'};
 </script>
