--- a/client/documentation/components/NavComponent.html
+++ b/client/documentation/components/NavComponent.html
@@ -312,8 +312,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="36"
-                            class="link-to-prism">src/app/nav/nav.component.ts:36</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="32"
+                            class="link-to-prism">src/app/nav/nav.component.ts:32</a></div>
                 </td>
             </tr>
 
@@ -463,10 +463,6 @@ export class NavComponent implements OnInit {
     this.accountService.login(this.model).subscribe({
       next: (response)&#x3D;&gt;{
         this.router.navigateByUrl(&#x27;/members&#x27;);
-      },
-      error: (error)&#x3D;&gt;{
-        console.log(error);
-        this.toastr.error(error.error);
       }
     });
   }
@@ -490,7 +486,7 @@ export class NavComponent implements OnInit {
       &lt;a class&#x3D;&quot;navbar-brand&quot; routerLink&#x3D;&quot;/&quot; routerLinkActive&#x3D;&quot;active&quot;&gt;Dating App&lt;/a&gt;
 
       &lt;ul class&#x3D;&quot;navbar-nav me-auto mb-2 mb-lg-0&quot;&gt;
-        &lt;ng-container&gt;
+        &lt;ng-container *ngIf&#x3D;&quot;(accountService.currentUser$ | async)&quot;&gt;
           &lt;li class&#x3D;&quot;nav-item&quot;&gt;
             &lt;a class&#x3D;&quot;nav-link&quot; routerLink&#x3D;&quot;/members&quot; routerLinkActive&#x3D;&quot;active&quot;&gt;Matches&lt;/a&gt;
           &lt;/li&gt;
@@ -501,6 +497,9 @@ export class NavComponent implements OnInit {
             &lt;a class&#x3D;&quot;nav-link&quot; routerLink&#x3D;&quot;/messages&quot; routerLinkActive&#x3D;&quot;active&quot;&gt;Messages&lt;/a&gt;
           &lt;/li&gt;
         &lt;/ng-container&gt;
+        &lt;li class&#x3D;&quot;nav-item&quot;&gt;
+          &lt;a class&#x3D;&quot;nav-link&quot; routerLink&#x3D;&quot;/errors&quot; routerLinkActive&#x3D;&quot;active&quot;&gt;Errors&lt;/a&gt;
+        &lt;/li&gt;
       &lt;/ul&gt;
 
       &lt;div class&#x3D;&quot;dropdown&quot; *ngIf&#x3D;&quot;(accountService.currentUser$ | async) as user&quot; dropdown&gt;
@@ -564,8 +563,8 @@ export class NavComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><nav class="navbar navbar-expand-lg navbar-dark bg-primary">  <div class="container">    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">      <span class="navbar-toggler-icon"></span>    </button>    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo01">      <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>      <ul class="navbar-nav me-auto mb-2 mb-lg-0">        <ng-container>          <li class="nav-item">            <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>          </li>          <li class="nav-item">            <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>          </li>          <li class="nav-item">            <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>          </li>        </ng-container>      </ul>      <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>        <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase }}</a>        <div class="dropdown-menu" *dropdownMenu>          <a class="dropdown-item">Edit Profile</a>          <div class="dropdown-divider"></div>          <a class="dropdown-item" (click)="logout()">Logout</a>        </div>      </div>      <form *ngIf="(accountService.currentUser$ | async) === null" class="d-flex" #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">        <input name="username" [(ngModel)]="model.username" class="form-control me-2" type="text" placeholder="Username">        <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password" placeholder="Password">        <button class="btn btn-success" type="submit">Login</button>      </form>    </div>  </div></nav></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'ListsComponent', 'selector': 'app-lists'},{'name': 'MemberDetailComponent', 'selector': 'app-member-detail'},{'name': 'MemberListComponent', 'selector': 'app-member-list'},{'name': 'MessagesComponent', 'selector': 'app-messages'},{'name': 'NavComponent', 'selector': 'app-nav'},{'name': 'RegisterComponent', 'selector': 'app-register'}];
+        var COMPONENT_TEMPLATE = '<div><nav class="navbar navbar-expand-lg navbar-dark bg-primary">  <div class="container">    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">      <span class="navbar-toggler-icon"></span>    </button>    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarTogglerDemo01">      <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>      <ul class="navbar-nav me-auto mb-2 mb-lg-0">        <ng-container *ngIf="(accountService.currentUser$ | async)">          <li class="nav-item">            <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>          </li>          <li class="nav-item">            <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>          </li>          <li class="nav-item">            <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>          </li>        </ng-container>        <li class="nav-item">          <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>        </li>      </ul>      <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>        <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase }}</a>        <div class="dropdown-menu" *dropdownMenu>          <a class="dropdown-item">Edit Profile</a>          <div class="dropdown-divider"></div>          <a class="dropdown-item" (click)="logout()">Logout</a>        </div>      </div>      <form *ngIf="(accountService.currentUser$ | async) === null" class="d-flex" #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">        <input name="username" [(ngModel)]="model.username" class="form-control me-2" type="text" placeholder="Username">        <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password" placeholder="Password">        <button class="btn btn-success" type="submit">Login</button>      </form>    </div>  </div></nav></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'ListsComponent', 'selector': 'app-lists'},{'name': 'MemberDetailComponent', 'selector': 'app-member-detail'},{'name': 'MemberListComponent', 'selector': 'app-member-list'},{'name': 'MessagesComponent', 'selector': 'app-messages'},{'name': 'NavComponent', 'selector': 'app-nav'},{'name': 'NotFoundComponent', 'selector': 'app-not-found'},{'name': 'RegisterComponent', 'selector': 'app-register'},{'name': 'ServerErrorComponent', 'selector': 'app-server-error'},{'name': 'TestErrorsComponent', 'selector': 'app-test-errors'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'NavComponent'};
 </script>
