--- a/client/documentation/components/ServerErrorComponent.html
+++ b/client/documentation/components/ServerErrorComponent.html
@@ -38,7 +38,7 @@
   <li>Components</li>
   <li
   >
-  RegisterComponent</li>
+  ServerErrorComponent</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -64,7 +64,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/register/register.component.ts</code>
+    <code>src/app/_errors/server-error/server-error.component.ts</code>
 </p>
 
 
@@ -95,19 +95,19 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>app-register</code></td>
+                <td class="col-md-9"><code>app-server-error</code></td>
             </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./register.component.css</code></td>
+                <td class="col-md-9"><code>./server-error.component.css</code></td>
             </tr>
 
 
 
             <tr>
                 <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>./register.component.html</code></td>
+                <td class="col-md-9"><code>./server-error.component.html</code></td>
             </tr>
 
 
@@ -134,7 +134,7 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#model" >model</a>
+                                <a href="#error" >error</a>
                             </li>
                         </ul>
                     </td>
@@ -149,33 +149,13 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#cancel" >cancel</a>
-                            </li>
-                            <li>
                                 <a href="#ngOnInit" >ngOnInit</a>
                             </li>
-                            <li>
-                                <a href="#register" >register</a>
-                            </li>
                         </ul>
                     </td>
                 </tr>
 
 
-                <tr>
-                    <td class="col-md-4">
-                        <h6><b>Outputs</b></h6>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <ul class="index-list">
-                            <li>
-                                <a href="#cancleRegister" >cancleRegister</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
 
 
 
@@ -189,12 +169,12 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(accountService: <a href="../injectables/AccountService.html" target="_self">AccountService</a>, toastr: ToastrService)</code>
+<code>constructor(router: <a href="https://angular.io/api/router/Router" target="_blank">Router</a>)</code>
                     </td>
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/register/register.component.ts:14</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/_errors/server-error/server-error.component.ts:11</a></div>
                             </td>
                         </tr>
 
@@ -212,22 +192,10 @@
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                        <td>accountService</td>
+                                                        <td>router</td>
                                                   
                                                         <td>
-                                                                        <code><a href="../injectables/AccountService.html" target="_self" >AccountService</a></code>
-                                                        </td>
-                                                  
-                                                    <td>
-                                                            No
-                                                    </td>
-                                                    
-                                                </tr>
-                                                <tr>
-                                                        <td>toastr</td>
-                                                  
-                                                        <td>
-                                                                    <code>ToastrService</code>
+                                                                        <code><a href="https://angular.io/api/router/Router" target="_blank" >Router</a></code>
                                                         </td>
                                                   
                                                     <td>
@@ -245,30 +213,7 @@
 </section>
 
 
-    <section>
-    <h3 id="outputs">Outputs</h3>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <a name="cancleRegister"></a>
-                        <b>cancleRegister</b>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://angular.io/api/core/EventEmitter" target="_blank" >EventEmitter</a></code>
 
-                    </td>
-                </tr>
-                        <tr>
-                            <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/register/register.component.ts:12</a></div>
-                            </td>
-                        </tr>
-            </tbody>
-        </table>
-</section>
 
 
     <section>
@@ -276,43 +221,6 @@
     <h3 id="methods">
         Methods
     </h3>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="cancel"></a>
-                    <span class="name">
-                        <span ><b>cancel</b></span>
-                        <a href="#cancel"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>cancel()</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="33"
-                            class="link-to-prism">src/app/register/register.component.ts:33</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
     <table class="table table-sm table-bordered">
         <tbody>
             <tr>
@@ -334,44 +242,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="18"
-                            class="link-to-prism">src/app/register/register.component.ts:18</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="register"></a>
-                    <span class="name">
-                        <span ><b>register</b></span>
-                        <a href="#register"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>register()</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="21"
-                            class="link-to-prism">src/app/register/register.component.ts:21</a></div>
+                            class="link-to-prism">src/app/_errors/server-error/server-error.component.ts:18</a></div>
                 </td>
             </tr>
 
@@ -397,10 +268,10 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="model"></a>
+                    <a name="error"></a>
                     <span class="name">
-                        <span ><b>model</b></span>
-                        <a href="#model"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>error</b></span>
+                        <a href="#error"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -410,14 +281,9 @@
 
                     </td>
                 </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Default value : </i><code>{}</code>
-                    </td>
-                </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/register/register.component.ts:14</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/_errors/server-error/server-error.component.ts:11</a></div>
                         </td>
                     </tr>
 
@@ -430,40 +296,24 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, EventEmitter, Input, OnInit, Output } from &#x27;@angular/core&#x27;;
-import { ToastrService } from &#x27;ngx-toastr&#x27;;
-import { AccountService } from &#x27;../_services/account.service&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
+import { Router } from &#x27;@angular/router&#x27;;
 
 @Component({
-  selector: &#x27;app-register&#x27;,
-  templateUrl: &#x27;./register.component.html&#x27;,
-  styleUrls: [&#x27;./register.component.css&#x27;]
+  selector: &#x27;app-server-error&#x27;,
+  templateUrl: &#x27;./server-error.component.html&#x27;,
+  styleUrls: [&#x27;./server-error.component.css&#x27;]
 })
-export class RegisterComponent implements OnInit {
+export class ServerErrorComponent implements OnInit {
 
-  @Output() cancleRegister &#x3D; new EventEmitter();
+  error:any;
 
-  model:any &#x3D; {};
-
-  constructor(private accountService:AccountService, private toastr:ToastrService) { }
+  constructor(private router:Router) {
+    const navigation &#x3D; this.router.getCurrentNavigation();
+    this.error &#x3D; navigation?.extras?.state?.error;
+  }
 
   ngOnInit(): void {
-  }
-
-  register(){
-    this.accountService.register(this.model).subscribe({
-      next:(response)&#x3D;&gt;{
-        this.cancel();
-      },
-      error: error&#x3D;&gt; {
-        console.log(error)
-        this.toastr.error(error.error);
-      }
-    });
-  }
-
-  cancel(){
-    this.cancleRegister.emit(false);
   }
 
 }
@@ -471,27 +321,29 @@ export class RegisterComponent implements OnInit {
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;form #registerFrom (ngSubmit)&#x3D;&quot;register()&quot; autocomplete&#x3D;&quot;off&quot;&gt;
-  &lt;h2 class&#x3D;&quot;text-center text-primary&quot;&gt;Sign up&lt;/h2&gt;
-  &lt;hr&gt;
-  &lt;div class&#x3D;&quot;form-group mb-3&quot;&gt;
-    &lt;input type&#x3D;&quot;text&quot; class&#x3D;&quot;form-control&quot; name&#x3D;&quot;username&quot; [(ngModel)]&#x3D;&quot;model.username&quot; placeholder&#x3D;&quot;Username&quot;&gt;
-  &lt;/div&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;h4&gt;Internal server error - refreshing the page will make the error disappear!&lt;/h4&gt;
+&lt;ng-container *ngIf&#x3D;&quot;error&quot;&gt;
+  &lt;h5 class&#x3D;&quot;text-danger&quot;&gt;Error: {{error.message}}&lt;/h5&gt;
+  &lt;p class&#x3D;&quot;font-weight-bold&quot;&gt;Note: If you are seeing this then Angular is proabably not to blame&lt;/p&gt;
+  &lt;p&gt;What to do next?&lt;/p&gt;
+  &lt;ol&gt;
+    &lt;li&gt;Open the chrome dev tools&lt;/li&gt;
+    &lt;li&gt;Inspect the network tab&lt;/li&gt;
+    &lt;li&gt;Check the failing request&lt;/li&gt;
+    &lt;li&gt;Examine the request URL - make sure this is correct&lt;/li&gt;
+    &lt;li&gt;Reproduce the error in postman - if we see the same response then the issue is not with Angular&lt;/li&gt;
+  &lt;/ol&gt;
+  &lt;p&gt;Following is the stack trace - this is where your investigation start&lt;/p&gt;
+  &lt;code class&#x3D;&quot;mt-5&quot; style&#x3D;&quot;background-color: whitesmoke;&quot;&gt;{{error.details}}&lt;/code&gt;
+&lt;/ng-container&gt;
 
-  &lt;div class&#x3D;&quot;form-group mb-3&quot;&gt;
-    &lt;input type&#x3D;&quot;password&quot; class&#x3D;&quot;form-control&quot; name&#x3D;&quot;password&quot; [(ngModel)]&#x3D;&quot;model.password&quot; placeholder&#x3D;&quot;Password&quot;&gt;
-  &lt;/div&gt;
-  &lt;div class&#x3D;&quot;form-group text-center&quot;&gt;
-    &lt;button class&#x3D;&quot;btn btn-success me-2&quot; type&#x3D;&quot;submit&quot;&gt;Register&lt;/button&gt;
-    &lt;button class&#x3D;&quot;btn btn-success me-2&quot; type&#x3D;&quot;button&quot; (click)&#x3D;&quot;cancel()&quot;&gt;Cancel&lt;/button&gt;
-  &lt;/div&gt;
-&lt;/form&gt;
+
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./register.component.css</code>
+                    <code>./server-error.component.css</code>
                 </p>
                 <pre class="line-numbers"><code class="language-scss"></code></pre>
     </div>
@@ -521,10 +373,10 @@ export class RegisterComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><form #registerFrom (ngSubmit)="register()" autocomplete="off">  <h2 class="text-center text-primary">Sign up</h2>  <hr>  <div class="form-group mb-3">    <input type="text" class="form-control" name="username" [(ngModel)]="model.username" placeholder="Username">  </div>  <div class="form-group mb-3">    <input type="password" class="form-control" name="password" [(ngModel)]="model.password" placeholder="Password">  </div>  <div class="form-group text-center">    <button class="btn btn-success me-2" type="submit">Register</button>    <button class="btn btn-success me-2" type="button" (click)="cancel()">Cancel</button>  </div></form></div>'
+        var COMPONENT_TEMPLATE = '<div><h4>Internal server error - refreshing the page will make the error disappear!</h4><ng-container *ngIf="error">  <h5 class="text-danger">Error: {{error.message}}</h5>  <p class="font-weight-bold">Note: If you are seeing this then Angular is proabably not to blame</p>  <p>What to do next?</p>  <ol>    <li>Open the chrome dev tools</li>    <li>Inspect the network tab</li>    <li>Check the failing request</li>    <li>Examine the request URL - make sure this is correct</li>    <li>Reproduce the error in postman - if we see the same response then the issue is not with Angular</li>  </ol>  <p>Following is the stack trace - this is where your investigation start</p>  <code class="mt-5" style="background-color: whitesmoke;">{{error.details}}</code></ng-container></div>'
     var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'ListsComponent', 'selector': 'app-lists'},{'name': 'MemberDetailComponent', 'selector': 'app-member-detail'},{'name': 'MemberListComponent', 'selector': 'app-member-list'},{'name': 'MessagesComponent', 'selector': 'app-messages'},{'name': 'NavComponent', 'selector': 'app-nav'},{'name': 'NotFoundComponent', 'selector': 'app-not-found'},{'name': 'RegisterComponent', 'selector': 'app-register'},{'name': 'ServerErrorComponent', 'selector': 'app-server-error'},{'name': 'TestErrorsComponent', 'selector': 'app-test-errors'}];
     var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'RegisterComponent'};
+    var ACTUAL_COMPONENT = {'name': 'ServerErrorComponent'};
 </script>
 <script src="../js/tree.js"></script>
 
@@ -570,7 +422,7 @@ export class RegisterComponent implements OnInit {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
-            var COMPODOC_CURRENT_PAGE_URL = 'RegisterComponent.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'ServerErrorComponent.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
